syntax = "proto3";

package mock;

message S {
    string name = 1;
}

message Query {
    string string_value = 1;
    bool bool_value = 2;
    int32 int32_value = 3;
    int64 int64_value = 4;
    uint32 uint32_value = 5;
    uint64 uint64_value = 6;
    float float_value = 7;
    double double_value = 8;
    S struct_value = 9;
    repeated string slice_value = 10;
}